--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/button2"
-        style="@style/customButton"/>
+        style="@style/customButton"
+        android:transitionName="myTransition"
+        />
 
     <Button
         android:id="@+id/button3"
