--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -3,8 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:transitionName="myTransition"
-    >
+    android:transitionName="myTransition">
     <Button
         android:id="@+id/exit_btn2"
         android:layout_width="30dp"
